# PNova

./: .gitignore  Cargo.toml  README.md  note.md
.github/workflows/: rust.yml
src/: bn254.rs  bn256_curve.rs  circuit.rs  commitment.rs  error.rs  errors.rs  exponentiation.rs  grain_lfsr.rs  group.rs  grumpkin.rs  grumpkin_curve.rs  ipa.rs  keccak_transcript.rs  kzg.rs  kzg_commitment.rs  lib.rs  nifs.rs  plonk.rs  poseidon.rs  poseidon_ro.rs  relaxed_plonk.rs  tmp.rs.bak  traits.rs  utils.rs
src/old/: bn256_curve.rs  exponentiation.rs  group.rs  grumpkin_curve.rs  poseidon_ro.rs  ro.rs  transcript.rs
src/poseidon/: mod.rs  poseidon_constants.rs
src/primary/: bn254_curve.rs  bn254_field.rs  circuit.rs  kzg.rs  mod.rs  nifs.rs  plonk.rs
src/provider/: bn254.rs  bn256_grumpkin.rs  keccak.rs  kzg.rs  mod.rs  poseidon.rs
src/secondary/: grumpkin_curve.rs  grumpkin_field.rs  ipa.rs  mod.rs
src/traits/: commitment.rs  mod.rs
