[package]
name = "pnova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha3 = "0.10"
rayon = "1.7"
num-traits = "0.2"
digest = "0.10"
generic-array = "1.0.0"
ark-bn254 = "0.4.0"

ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
        "sponge",
] }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = {version = "0.4.0", default-features = false}
ark-ff = {version= "0.4.0", default-features = false}
ark-poly = {version = "0.4.0", default-features = false}
jf_primitives = {git = "https://github.com/EspressoSystems/jellyfish", package = "jf-primitives"}
jf_utils = {git = "https://github.com/EspressoSystems/jellyfish", package = "jf-utils"}